--- a/qt/titlebar.ui
+++ b/qt/titlebar.ui
@@ -50,7 +50,7 @@
 		text-align: center;
     }
     QPushButton:hover {
-        background-color: #2980b9;
+        background-color: #0088ff;
     }
     QPushButton:pressed {
         background-color: #102438;
@@ -58,7 +58,7 @@
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <property name="spacing">
-       <number>20</number>
+       <number>0</number>
       </property>
       <property name="leftMargin">
        <number>0</number>
@@ -118,12 +118,29 @@
          <string>Свернуть</string>
         </property>
         <property name="styleSheet">
-         <string notr="true">QPushBotton:hover {
-	color: yellow
-}</string>
+         <string notr="true"/>
         </property>
         <property name="text">
          <string>_</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QWidget" name="spacer_4" native="true">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+          <horstretch>1</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>15</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: transparent</string>
         </property>
        </widget>
       </item>
@@ -154,12 +171,29 @@
          <string>Развернуть</string>
         </property>
         <property name="styleSheet">
-         <string notr="true">QPushButton:hover{
-	color:yellow
-}</string>
+         <string notr="true"/>
         </property>
         <property name="text">
          <string>⛶</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QWidget" name="spacer_5" native="true">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+          <horstretch>1</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>15</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: transparent</string>
         </property>
        </widget>
       </item>
@@ -196,7 +230,7 @@
         </property>
         <property name="styleSheet">
          <string notr="true">QPushButton:hover {
-	color: red;
+	background-color: red;
 }</string>
         </property>
         <property name="text">
@@ -313,12 +347,12 @@
     color: white;
 }
 QPushButton:hover {
-	color: rgb(138, 138, 138)
+	color: #0088ff;
 }
 </string>
         </property>
         <property name="text">
-         <string>Settings</string>
+         <string>Настройки</string>
         </property>
         <property name="flat">
          <bool>false</bool>
